hot fix for gnu plot on mac os